# django-sitetree

./: .codeclimate.yml  .coveragerc  .gitignore  .landscape.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  INSTALL  INSTALL.md  LICENSE  MANIFEST.in  README  README.md  README.rst  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
demo/: Dockerfile  README.rst  db.sqlite3  docker-compose.yml  manage.py  requirements.txt
demo/demo/: admin.py  apps.py  middleware.py  models.py  sitetrees.py  urls.py  utils.py  views.py
demo/settings/: settings.py  urls.py
docs/: 005_quickstart.md  010_tags.md  015_i18n.md  020_apps.md  025_management.md  030_templatesmod.md  035_tagsadv.md  040_customization.md  045_admin.md  050_forms.md  055_models.md  060_performance.md  065_thirdparty.md  Makefile  index.md
docs/source/: addons.rst  admin.rst  apps.rst  conf.py  customization.rst  forms.rst  hooks.rst  i18n.rst  index.rst  management.rst  models.rst  performance.rst  quickstart.rst  tags.rst  tagsadv.rst  templatesmod.rst  thirdparty.rst
sitetree/: __init__.py  admin.py  apps.py  compat.py  config.py  fields.py  forms.py  maketrans.sh  models.py  runtests.py  settings.py  sitetreeapp.py  tests.py  toolbox.py  utils.py
sitetree/migrations/: 0001_initial.py  0002_auto__add_field_treeitem_access_restricted__add_field_treeitem_access_.py  0002_treeitem_external.py  0002_treeitem_placeholder.py  0002_treeitem_url_params.py  0003_alter_tree_title_alter_treeitem_title.py  0004_auto__add_field_tree_title.py  0004_auto__add_field_treeitem_autohide_branch.py  0005_auto__add_field_treeitem_access_guest.py  0005_auto__add_field_treeitem_extra_classes.py  0006_auto__add_field_treeitem_link_target.py
sitetree/south_migrations/: 0003_auto__add_field_treeitem_access_loggedin.py  0004_auto__add_field_tree_title.py  0006_auto__add_field_treeitem_softroot_for__add_field_treeitem_hide_from.py  0006_auto__add_field_treeitem_url_params.py
sitetree/templatetags/: sitetree.py  sitetree_compat.py
sitetree/tests/: common.py  conftest.py  test_admin.py  test_dynamic.py  test_forms.py  test_management.py  test_migrations.py  test_models.py  test_other.py  test_stress.py  test_templatetags.py  test_utils.py  urls.py
src/sitetree/: __init__.py  admin.py  compat.py  fields.py  models.py  settings.py  sitetreeapp.py  utils.py
tests/: __init__.py  conftest.py  test_admin.py  test_dynamic.py  test_management.py  test_migrations.py  test_models.py  test_other.py  test_templatetags.py  test_utils.py
tests/testapp/: admin.py  conf.py  sitetrees.py  urls.py
(+88 files in other folders)
